force-app/main/default/objects/Account/fields/External_TXT__c.field-meta.xml
<CustomField>
    <fullName>External_TXT__c</fullName>
    <externalId>true</externalId>
    <label>External TXT</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>