force-app/main/default/objects/Account/fields/Picklist2__c.field-meta.xml
<CustomField>
    <fullName>Picklist2__c</fullName>
    <label>Picklist2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Picklist1__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>4</fullName>
            </value>
            <value>
                <fullName>5</fullName>
            </value>
            <value>
                <fullName>6</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>