force-app/main/default/objects/Account/fields/ReturningCustomer__c.field-meta.xml
<CustomField>
    <fullName>ReturningCustomer__c</fullName>
    <defaultValue>false</defaultValue>
    <label>ReturningCustomer</label>
    <type>Checkbox</type>
</CustomField>