force-app/main/default/objects/Account/recordTypes/Global_Ecosystem.recordType-meta.xml
<RecordType>
    <fullName>Global_Ecosystem</fullName>
    <active>true</active>
    <description>Global Innovation Ecosystem</description>
    <label>Global Innovation Ecosystem</label>
</RecordType>