force-app/main/default/objects/Account/recordTypes/seller.recordType-meta.xml
<RecordType>
    <fullName>seller</fullName>
    <active>true</active>
    <label>Individual seller</label>
</RecordType>